[package]
name = "betrayer"
version = "0.1.0"
edition = "2021"
authors = ["sidit77"]
license = "MIT"
description = "Simple tray icons that integrate well with winit"
repository = "https://github.com/sidit77/betrayer"
documentation = "https://docs.rs/betrayer"
readme = "Readme.md"
keywords = ["Tray", "Icon", "Menu"]
categories = ["api-bindings", "gui", "os"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
winit = { version = "0.29", optional = true}

[target."cfg(target_os = \"windows\")".dependencies]
once_cell = "1"
windows = { version = "0.54", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_System_SystemServices",
    "Win32_Graphics_Gdi"
]}

[target."cfg(target_os = \"linux\")".dependencies]
zbus = "4"
async-io = "2"
parking_lot = "0.12"
flume = "0.11"
png = "0.17"

[target."cfg(target_os = \"macos\")".dependencies]
block2 = "0.4"
icrate = { version = "0.1", features = ["apple", "Foundation_all", "AppKit_all"] }
objc2 = "0.5"

[dev-dependencies]
winit = "0.29"
simple_logger = { version = "4", default-features = false }
anyhow = "1"