[package]
name = "betrayer"
version = "0.2.0"
edition = "2021"
authors = ["sidit77"]
license = "MIT"
description = "Simple tray icons that integrate well with winit"
repository = "https://github.com/sidit77/betrayer"
documentation = "https://docs.rs/betrayer"
readme = "Readme.md"
keywords = ["Tray", "Icon", "Menu"]
categories = ["api-bindings", "gui", "os"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.21"
winit = { version = "0.29.15", optional = true}

[target."cfg(target_os = \"windows\")".dependencies]
once_cell = "1.19.0"
windows = { version = "0.56.0", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_System_SystemServices",
    "Win32_Graphics_Gdi"
]}

[target."cfg(target_os = \"linux\")".dependencies]
zbus = "4.1.2"
async-io = "2.3.2"
parking_lot = "0.12.1"
flume = "0.11.0"
png = "0.17.13"

[target."cfg(target_os = \"macos\")".dependencies]
block2 = "0.4.0"
icrate = { version = "0.1.0", features = ["apple", "Foundation_all", "AppKit_all"] }
objc2 = "0.5.0"

[dev-dependencies]
winit = "0.29.15"
simple_logger = { version = "4.3.3", default-features = false }
anyhow = "1.0.81"