[package]
name = "betrayer"
version = "0.4.0"
edition = "2021"
authors = ["sidit77"]
license = "MIT"
description = "Simple tray icons that integrate well with winit"
repository = "https://github.com/sidit77/betrayer"
documentation = "https://docs.rs/betrayer"
readme = "Readme.md"
keywords = ["Tray", "Icon", "Menu"]
categories = ["api-bindings", "gui", "os"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
winit = { version = "0.30", optional = true}

[target."cfg(target_os = \"windows\")".dependencies]
windows-result = "0.2.0"
windows-sys = { version = "0.59.0", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_System_SystemServices",
    "Win32_Graphics_Gdi"
]}

[target."cfg(target_os = \"linux\")".dependencies]
zbus = "5.0.1"
async-io = "2.3.4"
parking_lot = "0.12.3"
flume = "0.11.1"
png = "0.17.14"
futures-util = "0.3.31"

[target."cfg(target_os = \"macos\")".dependencies]
block2 = "0.5.1"
objc2-app-kit = { version = "0.2.2", features = [
    "NSButton",
    "NSCell",
    "NSControl",
    "NSStatusBar",
    "NSStatusBarButton",
    "NSStatusItem",
    "NSView"
] }
objc2-foundation = "0.2.2"
objc2 = "0.5.0"

[dev-dependencies]
winit = "0.30.5"
simple_logger = { version = "5.0.0", default-features = false }
anyhow = "1.0.91"
